Fix typo in render.yaml: privateSiervice -> privateService
Fixed typo in Spark NLP service configuration that was preventing
proper deployment on Render platform.

--- a/render.yaml
+++ b/render.yaml
@@ -69,7 +69,7 @@ services:
     plan: starter
 
   # Spark NLP Service (if needed)
-  - type: privateSiervice
+  - type: privateService
     name: me-core-spark
     runtime: docker
     repo: https://github.com/DYAI2025/ME_CORE_Backend-mar-spar.git
