--- a/.gitignore
+++ b/.gitignore
@@ -4,9 +4,6 @@ __pycache__/
 *$py.class
 *.so
 .Python
-env/
-venv/
-ENV/
 build/
 develop-eggs/
 dist/
@@ -23,102 +20,52 @@ wheels/
 .installed.cfg
 *.egg
 MANIFEST
-.pytest_cache/
-.coverage
-.tox/
-.mypy_cache/
-.dmypy.json
-dmypy.json
 
-# Node.js / Frontend
-node_modules/
-.next/
-out/
-.DS_Store
-*.log
-npm-debug.log*
-yarn-debug.log*
-yarn-error.log*
-.pnpm-debug.log*
-.env.local
-.env.development.local
-.env.test.local
-.env.production.local
-.vercel
-
-# Spark / Java
-*.class
-*.jar
-target/
-.metals/
-.bloop/
-.bsp/
-project/project/
-project/target/
-spark-warehouse/
-metastore_db/
-derby.log
+# Virtual Environment
+venv/
+ENV/
+env/
+.venv
 
 # IDE
-.idea/
 .vscode/
+.idea/
 *.swp
 *.swo
 *~
-.project
-.classpath
-.settings/
-
-# Environment
-.env
-.env.*
-!.env.example
 
 # OS
 .DS_Store
 Thumbs.db
 
+# Environment variables
+.env
+.env.local
+.env.*.local
+
 # Logs
-logs/
 *.log
+logs/
 
 # Testing
-coverage/
-.nyc_output/
-test-results/
-junit.xml
+.coverage
+.pytest_cache/
+htmlcov/
+.tox/
+.nox/
 
-# Docker
-.dockerignore
+# MongoDB
+dump/
 
-# Jenkins
-jenkins/workspace/
+# Node
+node_modules/
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
 
-# Temporary
-tmp/
-temp/
-*.tmp
-*.temp
+# Next.js
+.next/
+out/
 
-# Database
-*.db
-*.sqlite
-*.sqlite3
-
-# Compiled
-*.com
-*.class
-*.dll
-*.exe
-*.o
-*.so
-
-# Archives
-*.7z
-*.dmg
-*.gz
-*.iso
-*.jar
-*.rar
-*.tar
-*.zip
+# Metrics
+.claude-flow/
