Fix Fly.io deployment configuration for Python backend
- Updated fly.toml to explicitly use Dockerfile build
- Added .flyignore to exclude frontend/node files
- Created deploy-backend-only.sh for easy deployment
- Fixed issue where Fly.io incorrectly detected NodeJS app

The deployment now correctly identifies and builds the Python backend.

--- a/fly.toml
+++ b/fly.toml
@@ -1,11 +1,14 @@
 # Fly.io configuration for ME_CORE Backend
 app = "me-core-backend"
-primary_region = "fra"  # Frankfurt, Germany (closest to Europe)
+primary_region = "sin"  # Singapore (optimal for Asia-Pacific)
 kill_signal = "SIGINT"
 kill_timeout = "5s"
 
 [build]
+  # Explicitly specify this is a Dockerfile build, not auto-detect
   dockerfile = "backend/Dockerfile"
+  # Ignore detection of package.json etc
+  ignorefile = ".flyignore"
 
 [env]
   # Basic configuration
