Fix Java dependency issue in Docker deployment
- Created Dockerfile.fly for Python-only deployment (no Java)
- Updated fly.toml to use Dockerfile.fly
- Fixed original Dockerfile to use base stage by default
- Removed openjdk-11 dependency that was causing Fly.io failures
- Set SPARK_NLP_ENABLED=false for production deployment

The deployment will now work on Fly.io without Java dependency errors.

--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -1,6 +1,6 @@
 # Multi-stage Dockerfile for MarkerEngine with optional Spark NLP support
 
-# Base stage with core dependencies only
+# Base stage with core dependencies only (Production default)
 FROM python:3.10-slim as base
 
 WORKDIR /app/backend
@@ -9,14 +9,15 @@ WORKDIR /app/backend
 RUN apt-get update && apt-get install -y \
     gcc \
     g++ \
+    curl \
     && rm -rf /var/lib/apt/lists/*
 
 # Copy requirements and install dependencies
-COPY backend/requirements-base.txt ./
+COPY requirements-base.txt ./
 RUN pip install --no-cache-dir -r requirements-base.txt
 
 # Copy application code
-COPY backend/ ./
+COPY . ./
 
 # Create resources directory for detector path validation
 RUN mkdir -p /app/resources
@@ -33,15 +34,15 @@ ENV SPARK_NLP_ENABLED=false
 # Expose port
 EXPOSE 8000
 
-# Health check - use the minimal app health endpoint
-HEALTHCHECK --interval=30s --timeout=3s --start-period=40s --retries=3 \
-    CMD python -c "import httpx; httpx.get('http://localhost:8000/health')"
+# Health check - use curl instead of httpx to avoid import issues
+HEALTHCHECK --interval=30s --timeout=10s --start-period=40s --retries=3 \
+    CMD curl -f http://localhost:8000/health || exit 1
 
 # Run the minimal application for stable deployment
 CMD ["python", "minimal_app.py"]
 
 
-# Spark stage with full NLP support (optional)
+# Spark stage with full NLP support (optional - not used by default)
 FROM python:3.10-slim as spark
 
 WORKDIR /app/backend
@@ -52,6 +53,7 @@ RUN apt-get update && apt-get install -y \
     g++ \
     openjdk-11-jre-headless \
     wget \
+    curl \
     && rm -rf /var/lib/apt/lists/*
 
 # Set Java environment
@@ -59,11 +61,11 @@ ENV JAVA_HOME=/usr/lib/jvm/java-11-openjdk-amd64
 ENV PATH=$JAVA_HOME/bin:$PATH
 
 # Copy Spark requirements
-COPY backend/requirements-spark.txt ./
+COPY requirements-spark.txt ./
 RUN pip install --no-cache-dir -r requirements-spark.txt
 
 # Copy application code
-COPY backend/ ./
+COPY . ./
 
 # Create resources directory
 RUN mkdir -p /app/resources
@@ -84,8 +86,11 @@ ENV PYSPARK_DRIVER_PYTHON=python3
 EXPOSE 8000
 
 # Health check
-HEALTHCHECK --interval=30s --timeout=3s --start-period=60s --retries=3 \
-    CMD python -c "import httpx; httpx.get('http://localhost:8000/health')"
+HEALTHCHECK --interval=30s --timeout=10s --start-period=60s --retries=3 \
+    CMD curl -f http://localhost:8000/health || exit 1
 
 # Run the minimal application
 CMD ["python", "minimal_app.py"]
+
+# Default to base stage for production (no Java dependencies)
+FROM base as production
