--- a/backend/requirements-base.txt
+++ b/backend/requirements-base.txt
@@ -1,16 +1,32 @@
-# Base requirements for MarkerEngine v1.0
-# These are required for the core functionality without NLP
-
+# Core dependencies
 fastapi==0.104.1
 uvicorn[standard]==0.24.0
 pydantic==2.5.0
 pydantic-settings==2.1.0
-pymongo==4.6.0
-motor==3.3.2
-python-dotenv==1.0.0
-httpx==0.25.2
 
-# Testing dependencies
-pytest==7.4.3
-pytest-asyncio==0.21.1
-pytest-cov==4.1.0
+# Database
+pymongo==4.5.0  # Fixed version for motor compatibility
+motor==3.3.2
+
+# Monitoring (CRITICAL - were missing!)
+prometheus_client==0.19.0
+psutil==5.9.6
+
+# HTTP and async
+httpx==0.25.2
+aiofiles==23.2.1
+python-multipart==0.0.6
+
+# Security
+python-jose[cryptography]==3.3.0
+passlib[bcrypt]==1.7.4
+bcrypt==4.1.1
+
+# Utilities
+python-dotenv==1.0.0
+pyyaml==6.0.1
+retry==0.9.2
+
+# Additional utilities
+pendulum==2.1.2
+orjson==3.9.10
